--- a/src/aura/EmailHistory/EmailHistory.cmp
+++ b/src/aura/EmailHistory/EmailHistory.cmp
@@ -13,49 +13,51 @@
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
 
-    <div class="emailPanel">
-        <div class="rowGrid headerRow">
-            <div></div>
-            <div>DATE</div>
-            <div>FROM</div>
-            <div>SUBJECT</div>
-            <div>STATUS</div>
+    <aura:if isTrue="{!v.emails}">
+        <div class="emailPanel">
+            <div class="rowGrid headerRow">
+                <div></div>
+                <div>DATE</div>
+                <div>FROM</div>
+                <div>SUBJECT</div>
+                <div>STATUS</div>
+            </div>
+            <div>
+                <aura:iteration items="{!v.emails}" var="email">
+                    <div class="rowGrid detailRow" onclick="{!c.getEmailBody}"
+                         data-emailid="{!email.EmailId}" style="{!email.EmailId ? '' : 'opacity:0.5'}">
+    <!--                    <div style="{!email.Opened ? 'opacity:0.5' : ''}">-->
+                        <div>
+                            <lightning:icon iconName="{!email.Opened ? 'utility:email_open' : 'utility:email'}" size="small"/>
+                        </div>
+                        <div>{!email.DateString}</div>
+                        <div>
+                            <aura:if isTrue="{!email.From}">
+    <!--                            <span style="{!email.EmailId ? '' : 'color:grey'}">{!email.From}</span>-->
+                                <span>{!email.From}</span>
+                                <aura:set attribute="else">
+                                    <span class="spinner">
+                                        <div class="bounce1"></div><div class="bounce2"></div><div class="bounce3"></div>
+                                    </span>
+                                </aura:set>
+                            </aura:if>
+                        </div>
+                        <div>
+                            <aura:if isTrue="{!email.Subject}">
+    <!--                            <span style="{!email.EmailId ? '' : 'color:grey'}">{!email.Subject}</span>-->
+                                <span>{!email.Subject}</span>
+                                <aura:set attribute="else">
+                                    <span class="spinner">
+                                        <div class="bounce1"></div><div class="bounce2"></div><div class="bounce3"></div>
+                                    </span>
+                                </aura:set>
+                            </aura:if>
+                        </div>
+                        <div>{!email.Status}</div>
+                    </div>
+                </aura:iteration>
+            </div>
         </div>
-        <div>
-            <aura:iteration items="{!v.emails}" var="email">
-                <div class="rowGrid detailRow" onclick="{!c.getEmailBody}"
-                     data-emailid="{!email.EmailId}" style="{!email.EmailId ? '' : 'opacity:0.5'}">
-<!--                    <div style="{!email.Opened ? 'opacity:0.5' : ''}">-->
-                    <div>
-                        <lightning:icon iconName="{!email.Opened ? 'utility:email_open' : 'utility:email'}" size="small"/>
-                    </div>
-                    <div>{!email.DateString}</div>
-                    <div>
-                        <aura:if isTrue="{!email.From}">
-<!--                            <span style="{!email.EmailId ? '' : 'color:grey'}">{!email.From}</span>-->
-                            <span>{!email.From}</span>
-                            <aura:set attribute="else">
-                                <span class="spinner">
-                                    <div class="bounce1"></div><div class="bounce2"></div><div class="bounce3"></div>
-                                </span>
-                            </aura:set>
-                        </aura:if>
-                    </div>
-                    <div>
-                        <aura:if isTrue="{!email.Subject}">
-<!--                            <span style="{!email.EmailId ? '' : 'color:grey'}">{!email.Subject}</span>-->
-                            <span>{!email.Subject}</span>
-                            <aura:set attribute="else">
-                                <span class="spinner">
-                                    <div class="bounce1"></div><div class="bounce2"></div><div class="bounce3"></div>
-                                </span>
-                            </aura:set>
-                        </aura:if>
-                    </div>
-                    <div>{!email.Status}</div>
-                </div>
-            </aura:iteration>
-        </div>
-    </div>
+    </aura:if>
 
 </aura:component>
