--- a/src/aura/EmailHistory/EmailHistory.cmp
+++ b/src/aura/EmailHistory/EmailHistory.cmp
@@ -9,52 +9,102 @@
     <aura:attribute name="sobjecttype" type="String" default="{!v.sObjectName}"/>
     <aura:attribute name="EmailField" type="String" />
     <aura:attribute name="emails" type="Object[]" />
+    <aura:attribute name="emailBodies" type="Object[]" />
     <aura:attribute name="customerKeys" type="String[]" />
+
+
+    <aura:attribute name="previewId" type="String" />
+
+
+    <aura:attribute name="preview" type="String" />
+    <aura:attribute name="previewing" type="Boolean" default="false"/>
+
+    <aura:attribute name="responsePending" type="Boolean" default="true"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
 
-    <aura:if isTrue="{!v.emails}">
+
+    <aura:if isTrue="{!v.responsePending}">
+        <div style="height:50px">
+            <lightning:spinner />
+        </div>
+    </aura:if>
+
+
+<!--    <aura:if isTrue="{!and(v.preview,v.previewing)}">-->
+<!--        <div class="modalBackdrop" onclick="{!c.closePreview}"></div>-->
+<!--        <div class="iframeModal">-->
+<!--            <div class="buttonPanel">-->
+<!--                <lightning:button onclick="{!c.closePreview}" label="CLOSE"/>-->
+<!--            </div>-->
+<!--            <div class="previewPanel">-->
+<!--                <iframe src="{!v.preview}" width="100%" height="100%"></iframe>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </aura:if>-->
+
+    <aura:if isTrue="{!and(v.emails.length > 0,not(v.responsePending))}">
         <div class="emailPanel">
             <div class="rowGrid headerRow">
                 <div></div>
                 <div>DATE</div>
-                <div>FROM</div>
-                <div>SUBJECT</div>
+                <div>DETAILS</div>
                 <div>STATUS</div>
             </div>
             <div>
                 <aura:iteration items="{!v.emails}" var="email">
                     <div class="rowGrid detailRow" onclick="{!c.getEmailBody}"
-                         data-emailid="{!email.EmailId}" style="{!email.EmailId ? '' : 'opacity:0.5'}">
-    <!--                    <div style="{!email.Opened ? 'opacity:0.5' : ''}">-->
+                         data-emailid="{!email.EmailId}" >
                         <div>
-                            <lightning:icon iconName="{!email.Opened ? 'utility:email_open' : 'utility:email'}" size="small"/>
+                            <lightning:icon iconName="{!email.Opened ? 'utility:email_open' : 'utility:email'}"
+                                            size="small" variant="{!email.Opened ? 'warning' : ''}"/>
                         </div>
-                        <div>{!email.DateString}</div>
+                        <div class="noSpill">{!email.DateString}</div>
                         <div>
-                            <aura:if isTrue="{!email.From}">
-    <!--                            <span style="{!email.EmailId ? '' : 'color:grey'}">{!email.From}</span>-->
-                                <span>{!email.From}</span>
-                                <aura:set attribute="else">
-                                    <span class="spinner">
-                                        <div class="bounce1"></div><div class="bounce2"></div><div class="bounce3"></div>
-                                    </span>
-                                </aura:set>
-                            </aura:if>
+
+                            <div>
+                                some text {!email.EmailId == v.previewId ? 'SOME TEXT' : ''} some more
+
+                                {!email.EmailId == v.previewId ? 'SOME TEXT' : ''}
+
+                                <aura:if isTrue="{!email.EmailId == v.previewId}">
+
+                                    HERE'S a whole bunch of text
+
+                                    <!--                        <div class="">-->
+
+                                    <!--                            email should show here-->
+                                    <!--&lt;!&ndash;                            <iframe src="{!v.preview}" width="100%" height="100%"></iframe>&ndash;&gt;-->
+                                    <!--                        </div>-->
+
+                                </aura:if>
+
+
+                            </div>
+
+                            <div class="noSpill"><strong>{!email.Name}</strong></div>
+                            <div class="noSpill">{!email.Subject}</div>
                         </div>
-                        <div>
-                            <aura:if isTrue="{!email.Subject}">
-    <!--                            <span style="{!email.EmailId ? '' : 'color:grey'}">{!email.Subject}</span>-->
-                                <span>{!email.Subject}</span>
-                                <aura:set attribute="else">
-                                    <span class="spinner">
-                                        <div class="bounce1"></div><div class="bounce2"></div><div class="bounce3"></div>
-                                    </span>
-                                </aura:set>
-                            </aura:if>
-                        </div>
-                        <div>{!email.Status}</div>
+                        <div class="noSpill">{!email.Status}</div>
+
+
+
                     </div>
+<!--                    {!email.EmailId == v.previewId ? 'SOME TEXT' : ''}-->
+
+
+                    <aura:if isTrue="{!email.EmailId == v.previewId}">
+
+                        HERE'S a whole bunch of text
+
+<!--                        <div class="">-->
+
+<!--                            email should show here-->
+<!--&lt;!&ndash;                            <iframe src="{!v.preview}" width="100%" height="100%"></iframe>&ndash;&gt;-->
+<!--                        </div>-->
+
+                    </aura:if>
+
                 </aura:iteration>
             </div>
         </div>
