--- a/src/aura/EmailHistory/EmailHistory.css
+++ b/src/aura/EmailHistory/EmailHistory.css
@@ -11,7 +11,7 @@
 
 .THIS .rowGrid {
     display: grid;
-    grid-template-columns: 5% 25% 60% 10%;
+    grid-template-columns: 3% 30% 65%;
     padding-bottom: 3px;
     padding-top: 3px;
 }
